force-app/main/default/objects/Vehicles__c/fields/Autopilot__c.field-meta.xml
<CustomField>
    <fullName>Autopilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autopilot</label>
    <type>Checkbox</type>
</CustomField>