force-app/main/default/objects/Vehicles__c/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <label>Battery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>