force-app/main/default/objects/Vehicles__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>