force-app/main/default/objects/Vehicles__c/fields/Driver_License__c.field-meta.xml
<CustomField>
    <fullName>Driver_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver License</label>
    <referenceTo>Drivers_License__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>