force-app/main/default/objects/Vehicles__c/fields/Driver_License_Verified__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver License Verified</label>
    <type>Checkbox</type>
</CustomField>