force-app/main/default/objects/Vehicles__c/fields/Interiorc__c.field-meta.xml
<CustomField>
    <fullName>Interiorc__c</fullName>
    <label>Interiorc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>