force-app/main/default/objects/Vehicles__c/fields/Netsuite_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Order_ID__c</fullName>
    <label>Netsuite Order ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>