force-app/main/default/objects/Vehicles__c/fields/Paint__c.field-meta.xml
<CustomField>
    <fullName>Paint__c</fullName>
    <label>Paint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>