force-app/main/default/objects/Vehicles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Model__c</columns>
    <columns>Year__c</columns>
    <columns>Autopilot__c</columns>
    <columns>Battery__c</columns>
    <columns>Billing_Status__c</columns>
    <columns>Hydraulic_System__c</columns>
    <columns>Interiorc__c</columns>
    <columns>Paint__c</columns>
    <columns>Rear_Seats__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>