force-app/main/default/objects/Vehicles__c/listViews/On_Sale.listView-meta.xml
<ListView>
    <fullName>On_Sale</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Evaluation</value>
    </filters>
    <label>Test Drive</label>
</ListView>